# svdata

./: Cargo.toml  hej.py  program.prof  pyproject.toml  svdata.pyi
.github/workflows/: CI.yml
src/: lib.rs  sv_data.rs  sv_instance.rs  sv_misc.rs  sv_module.rs  sv_port.rs  sv_variable.rs  svdata.rs
tests/python/: test_svdata.py
tests/rust/: test_svdata.rs
tests/systemverilog/: ansi_module_a.sv
